--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -27,7 +27,7 @@ h6 {
 }
 
 p, a, li, span {
-    font-family: var(--font-sans);
+    font-family: var(--font-serif);
     line-height: 1.5;
     font-size: var(--font-size-1);
 }
