--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
+@font-face {
+  font-family: "Baskerville";
+  font-style: normal;
+  font-weight: normal;
+  src: url("assets/fonts/baskerville.woff") format("woff");
+}
+@font-face {
+  font-family: "Berlin";
+  font-style: normal;
+  font-weight: normal;
+  src: url("assets/fonts/berlinsans-webfont.woff") format("woff");
+}
 :root {
-  --font-sans: sans-serif;
-  --font-serif: serif;
+  --font-serif: "Baskerville", serif;
+  --font-sans: "Berlin", sans-serif;
   --font-base: 1rem;
   --font-scale: 1.25;
   --font-size-1: var(--font-base);
@@ -70,7 +82,7 @@ h6 {
 }
 
 p, a, li, span {
-  font-family: var(--font-sans);
+  font-family: var(--font-serif);
   line-height: 1.5;
   font-size: var(--font-size-1);
 }
