CSS header and hero

--- a/src/scss/tools/_variables.scss
+++ b/src/scss/tools/_variables.scss
@@ -30,10 +30,10 @@
     --font-size-6: calc( var(--font-size-5) * var(--font-scale) ); 
 
     // Colors
-    --color-accent: #DBDBD7;
-    --color-light: #ededed;
-    --color-medium: #373737;
-    --color-dark: #313131; 
+    --color-black: #222222;
+    --color-grey: #898989; 
+    --color-light: #FAE8CC;  
+    --color-lighter: #FFF9EF;
 
     // Section gaps
     --section-gap: 8rem;
