--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@
   --font-size-4: calc( var(--font-size-3) * var(--font-scale) );
   --font-size-5: calc( var(--font-size-4) * var(--font-scale) );
   --font-size-6: calc( var(--font-size-5) * var(--font-scale) );
-  --color-accent: #DBDBD7;
-  --color-light: #ededed;
-  --color-medium: #373737;
-  --color-dark: #313131;
+  --color-black: #222222;
+  --color-grey: #898989;
+  --color-light: #FAE8CC;
+  --color-lighter: #FFF9EF;
   --section-gap: 8rem;
   --section-gap-inner: calc( var(--section-gap) * 0.75 );
   --section-gap-inner-small: calc( var(--section-gap) * 0.5);
@@ -89,6 +89,91 @@ p, a, li, span {
 
 a {
   text-decoration: none;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: var(--grid-container);
+  height: var(--menu-height);
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+.header__inner {
+  grid-column: inner;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .menu-button {
+  background: none;
+  border: 0;
+  padding: 0;
+  height: 40px;
+  width: 26px;
+}
+.header .menu-button__hamburger {
+  height: 2px;
+  width: 100%;
+  background: var(--color-light);
+  position: relative;
+}
+.header .menu-button__hamburger::before, .header .menu-button__hamburger::after {
+  content: "";
+  height: 2px;
+  width: 100%;
+  left: 0;
+  background: var(--color-light);
+  position: absolute;
+}
+.header .menu-button__hamburger::before {
+  top: -8px;
+}
+.header .menu-button__hamburger::after {
+  top: 8px;
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: var(--grid-container);
+  height: 100vh;
+  background-color: var(--color-black);
+}
+.hero__inner {
+  grid-column: inner;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero__content {
+  text-align: center;
+}
+.hero__flower {
+  margin: 0;
+  padding: 0 0 1rem 0;
+}
+.hero__title, .hero__text, .hero__link {
+  color: var(--color-light);
+  margin: 0;
+  padding: 0;
+}
+.hero__text, .hero__link {
+  font-size: var(--font-size-2);
+}
+.hero__text {
+  position: relative;
+  padding: 0.6rem 0 3rem 0;
+}
+.hero__text::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 70px;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-light);
 }
 
 /*# sourceMappingURL=style.css.map */
