--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,3 +1,8 @@
+.promo, 
+.gallery {
+    background-color: var(--color-lighter);
+}
+
 .promo {
     display: grid;
     grid-template-columns: var(--grid-container);
@@ -9,8 +14,160 @@
 
     &__img {
         margin-top: calc( var(--section-gap-inner)* -1);
-        display: block;
-        border-radius: 16px;
+        border-radius: var(--border-radius);
         overflow: hidden;
+
+        img {
+            border-radius: var(--border-radius);
+            overflow: hidden;
+        }
     }
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: var(--grid-container);
+    padding: 6rem 0 6rem 0;
+
+    &__inner {
+        grid-column: inner;
+        display: grid;
+        grid-template-columns: var(--grid-content);
+        gap: var(--grid-gap);
+    }
+
+    &__content {
+        grid-column: 1/-1;
+        text-align: center;
+        margin: 0 auto;
+        max-width: var(--content-width-small);
+    }
+
+    &__flower, 
+    &__text,
+    &__img-text {
+        padding: 0;
+        margin: 0;
+    }
+
+    &__flower {
+        padding-bottom: 1rem;
+    }
+
+    &__text {
+        font-size: var(--font-size-2);
+        padding-bottom: 1rem;
+        color: var(--color-black);
+    }
+    
+    &__item-1 {
+        grid-column: 1/5;
+    }
+    
+    &__item-2 {
+        grid-column: 5/9
+    }
+    
+    &__item-3 {
+        grid-column: 9/13;
+    }
+
+    &__img {
+       border-radius: var(--border-radius);
+       overflow: hidden;
+
+       img {
+            border-radius: var(--border-radius);
+            overflow: hidden;
+       }
+    }
+
+    &__img-text {
+        text-align: center;
+        padding-top: 1rem;
+        color: var(--color-grey);
+    }
+
+}
+
+.membership {
+    display: grid;
+    grid-template-columns: var(--grid-container);
+    background-color: var(--color-black);
+    padding: 5rem 0 5rem 0;
+    
+    &__inner {
+        grid-column: inner;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: var(--grid-gap-big);
+    }
+
+    &__image {
+        width: 100%;
+        border-radius: var(--border-radius);
+        overflow: hidden;
+        
+        img {
+            border-radius: var(--border-radius);
+            overflow: hidden;
+            
+        }
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column; // main-axsis (y-led, uppfrån ocn ned) 
+        justify-content: center; // textinnehållet centreras i y-led, uppifrån och ned
+        max-width: var(--content-width-small);
+    }
+
+    &__flower {
+        margin: 0;
+        padding: 0 0 1rem 0;
+    }
+
+    
+    &__title,
+    &__text,
+    &__link {
+        color: var(--color-light);
+        margin: 0;
+    }
+
+    &__text {
+        color: var(--color-grey);
+    }
+
+    &__title {
+        padding: 0 0 0.4rem 0;
+    }
+
+    &__text {
+        position: relative; 
+        font-size: var(--font-size-2);
+        padding: 0.75rem 0 0 0;
+    }
+    
+    &__text::before {
+        content: '';
+        position: absolute;
+        height: 2px;
+        width: 70px;
+        background-color: var(--color-grey);
+        top: 0;
+        bottom: 0;
+    }
+
+    &__link {
+        display: flex;
+        align-items: center;
+        padding: 3rem 0 0 0;
+    }
+
+    &__arrow {
+        padding: 0 1rem 0 0;
+    }
+
+
 }
