--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,3 +16,13 @@ img {
     width: auto;
     height: auto;
 }
+
+figure {
+    margin: 0; 
+    padding: 0;
+}
+
+picture {
+    margin: 0;
+    padding: 0;
+}
