--- a/src/scss/pages/home/_hero.scss
+++ b/src/scss/pages/home/_hero.scss
@@ -1,9 +1,12 @@
+@use '../../components/buttons' as button;
+
 .hero {
    display: grid;
    grid-template-columns: var(--grid-container); 
    min-height: calc(100vh + var(--section-gap-inner));
    width: 100%;
    background-color: var(--color-black);
+   
 
    &__inner {
         grid-column: inner;
@@ -18,10 +21,13 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        max-width: 100%;
+        z-index: 1;
    }
 
    &__content {
-        text-align: center;
+       text-align: center;
+       z-index: 2;
    }
 
 
@@ -33,19 +39,13 @@
    &__title,
    &__text,
    &__link {
-       color: var(--color-light);
        margin: 0;
        padding: 0;
     }
 
-    &__text,
-    &__link {
-        font-size: var(--font-size-2);
-    }
-
     &__text {
         position: relative;
-        padding: 0.6rem 0 6rem 0;
+        padding: 0.6rem 0 0 0;
     }
 
     &__text::before {
@@ -59,15 +59,31 @@
         background-color: var(--color-grey);
     }
 
-    &__arrow, &__link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    &__link {
+        @include button.standard (
+            $color: var(--color-light), 
+            $font-size: var(--font-size-1),
+            $hover-color: var(--color-grey),
+            $justify-content: center,
+            $align-items: center,
+            $padding: 6rem 0 0 0
+        )
+
     }
 
     &__arrow {
-        padding-right: 0.5rem;
+        padding-right: 0.75rem;
     }
 
+    &__link &__link-text {
+        position: relative;
+        transition: all 0.5s;
+        left: 0; 
+    }
+
+    &__link:hover &__link-text {
+        left: 0.25rem; 
+    }
+    
 }
 
